# doge

./: .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
docs/: CONTRIBUTING.md
examples/: CMakeLists.txt  cube.hpp  static_objects.hpp
examples/camera/: CMakeLists.txt  camera.cpp
examples/coordinates/: CMakeLists.txt
examples/coordinates/example/: CMakeLists.txt  coordinates.example.frag.glsl  coordinates.example.vert.glsl  example.cpp
examples/coordinates/static-rotate/: CMakeLists.txt  static_rotate.cpp
examples/hello-triangle/: CMakeLists.txt  binary_triangle_one_vbo.cpp  binary_triangle_two_vbo.cpp  fragment.glsl  vertex.glsl  yellow.glsl
examples/imgui/: CMakeLists.txt  imgui.cpp
examples/lighting/: CMakeLists.txt  colour.frag.glsl  colour.vert.glsl  directional_light.cpp  example.directional_light.frag.glsl  light_source.frag.glsl  light_source.vert.glsl  lighting.cpp
examples/lighting/directional_light/: CMakeLists.txt  directional_light.cpp  example.directional_light.frag.glsl  example.directional_light.vert.glsl
examples/lighting/multiple_lights/: CMakeLists.txt  example.multiple_lights.frag.glsl
examples/lighting/point_light/: CMakeLists.txt  example.point_light.frag.glsl  example.point_light.vert.glsl  point_light.cpp
examples/lighting/positional_lighting/: CMakeLists.txt  example.positional_lighting.vert.glsl  positional_lighting.cpp
examples/lighting/spotlight/: CMakeLists.txt  example.spot_light.frag.glsl  example.spot_light.vert.glsl  spotlight.cpp
examples/shaders/: CMakeLists.txt
examples/shaders/attributes/: CMakeLists.txt  attributes.cpp  attributes.vert.glsl
examples/shaders/offset/: CMakeLists.txt  offset.cpp  offset.frag.glsl  offset.vert.glsl
examples/shaders/uniform/: CMakeLists.txt  uniform.cpp  uniform.frag.glsl  uniform.vert.glsl
examples/textures/: CMakeLists.txt  example.frag.glsl  example.vert.glsl  texture.example.cpp
examples/transforms/: CMakeLists.txt
examples/transforms/example/: CMakeLists.txt  example.cpp  transform.vert.glsl
examples/transforms/size-transform/: CMakeLists.txt  size_transform.cpp
include/doge/: doge.hpp  engine.hpp  entity.hpp  gl.hpp  hid.hpp  types.hpp  utility.hpp
include/doge/detail/: gl_invocable.hpp  matrix.hpp
include/doge/entity/: basic_entity.hpp  camera.hpp  light_source.hpp
include/doge/gl/: binder.hpp  buffer.hpp  buffer_interpreter.hpp  cast.hpp  gl_error.hpp  memory.hpp  shader_binary.hpp  shader_source.hpp  texture.hpp  uniform.hpp  vertex_array.hpp  vertex_buffer.hpp
include/doge/glm/: matrix.hpp
include/doge/meta/: clear.hpp  join.hpp  partial_sum.hpp  rotate.hpp
include/doge/units/: angle.hpp
include/doge/utility/: file.hpp  reference_count.hpp  screen_data.hpp  std_layout_tuple.hpp  type_traits.hpp  utility.hpp
include/gl/: gl_core.hpp
include/imgui/: imgui_internal.h  stb_truetype.h
source/: CMakeLists.txt  gl_core.cpp
source/doge/: CMakeLists.txt
source/doge/gl/: CMakeLists.txt  shader_binary.cpp  shader_source.cpp  texture.cpp
source/doge/utility/: CMakeLists.txt  file.cpp
source/imgui/: CMakeLists.txt  imgui.cpp  imgui_draw.cpp
test/: CMakeLists.txt
test/doge/: CMakeLists.txt  catch_main.cpp
test/doge/gl/: CMakeLists.txt  test.uniform.frag.glsl  test.uniform.vert.glsl  uniform.cpp
test/doge/meta/: CMakeLists.txt  partial_sum.cpp
test/doge/utility/: CMakeLists.txt  type_traits.cpp
